# web2.0_homework_10

./: pyproject.toml
quotes/quoteapp/: forms.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_remove_quote_created_remove_quote_description.py  0003_alter_tag_name.py
quotes/quoteapp/templates/quoteapp/: authoradd.html  index.html
quotes/quotes/: settings.py
quotes/users/: views.py
quotes/users/templates/users/: signup.html
